--- a/languages/en.json
+++ b/languages/en.json
@@ -185,6 +185,24 @@
         "greeting": "Hi there! 👋",
         "message": "I really appreciate your interest in getting in touch! The email section of my website is still under construction. In the meantime, you can find my contact details in my CV. Thank you for your patience and understanding. 😊 "
     },
+    "blog": {
+        "title": "My Blog",
+            "posts": {
+                "post1": {
+                    "title": "Hi there! Welcome to my blog",
+                    "preview": "Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 ..."
+                },
+                "post2": {
+                    "title": "Why I started programming",
+                    "preview": "So you want to know why I started programming huh? Well, it all started when I was born. ... Nah, just kidding! The real story takes place a few years later than that. I've always been a fairly creative person, partially because of my health issues that kept me indoors throughout my entire childhood. I had to look for ways to entertain myself that weren't just watching TV all day. Fortunately, I was a very imaginative kid, so I started drawing ..."
+                },
+                "post3": {
+                    "title": "Struggles of a webdesigner",
+                    "preview": "When I tell someone I study Digital Experience Design, the most common response I get is: \"Oh, so you work with computers?\" and yeah, that's true, but it's way more than that. A big part of my study is learning how to design and code websites and apps which I absolutely love doing. However, one of the biggest struggles I face as a webdesigner is the creative block ..."
+                }
+            },
+            "readMore": "Read more →"
+        },
     "footer": {
         "text": "© 2025 Audromida Designs. All rights reserved."
     }
