Fix: fixed minor translation issues with the hero section CTA buttons

--- a/languages/en.json
+++ b/languages/en.json
@@ -11,7 +11,7 @@
         "subtitle": "Frontend Designer/ Developer",
         "description": "I can help you design and build unique and user-friendly websites your users will love!",
         "contactBtn": "Get in touch",
-        "projectBtn": "Browse Projects"
+        "projectsBtn": "Browse Projects"
     },
     "about": {
         "title": "About me",
